bugs de la version mobile corrigés

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1727,8 +1727,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 30px;
   background-color: white;
   max-width: 900px;
-  width: 900px;
-  height: 500px;
 }
 
 #glarinaRow {
@@ -1739,9 +1737,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 #valeurs-nutritives {
   background-color: #bfbfbf;
   height: 100%;
+  padding-bottom: 30px;
   border-radius: 30px 0 0 30px;
   padding-left: 0;
   padding-right: 0;
+}
+
+@media (max-width: 768px) {
+  #valeurs-nutritives {
+    border-radius: 30px 30px 0 0;
+  }
 }
 
 #valeurs-nutritives h3 {
@@ -1786,9 +1791,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #glarinaDescription {
   color: #000000;
-  padding-top: 90px;
+  padding-top: 70px;
   padding-left: 40px;
   padding-right: 40px;
+  padding-bottom: 30px;
   text-align: right;
 }
 
@@ -1816,8 +1822,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 30px;
   background-color: white;
   max-width: 900px;
-  width: 900px;
-  height: 500px;
 }
 
 #glarinaCommandeSuccess .modal-dialog, #glarinaCommandeError .modal-dialog {
